[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/world/nightsky.png" type="Texture" id=1]
[ext_resource path="res://game/environment/walls.meshlib" type="MeshLibrary" id=2]
[ext_resource path="res://game/environment/Moon.tscn" type="PackedScene" id=3]
[ext_resource path="res://game/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://game/environment/floors.meshlib" type="MeshLibrary" id=5]
[ext_resource path="res://game/collectibles/CrestPiece.tscn" type="PackedScene" id=6]
[ext_resource path="res://game/Levels/colosseum.gd" type="Script" id=7]
[ext_resource path="res://game/environment/Colgate.tscn" type="PackedScene" id=8]
[ext_resource path="res://game/enemies/ShadeWarrior.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/audio/bg1.wav" type="AudioStream" id=10]

[sub_resource type="PanoramaSky" id=1]
panorama = ExtResource( 1 )

[sub_resource type="Environment" id=2]
background_mode = 2
background_sky = SubResource( 1 )
background_color = Color( 0.0666667, 0.0666667, 0.0666667, 1 )
background_energy = 5.08
ambient_light_color = Color( 1, 1, 1, 1 )
fog_color = Color( 0.113725, 0.12549, 0.258824, 1 )
fog_sun_color = Color( 0.372549, 0.219608, 0.219608, 1 )

[sub_resource type="NavigationMesh" id=3]
vertices = PoolVector3Array( 11.4, 0.4, -26.2, 12.9, 0.4, -26.5, 12.9, 0.4, -29.5, 11.4, 0.4, -29.8, -11.4, 0.4, -28, -11.4, 0.4, -16.6, -1.8, 0.4, -16.6, -1.5, 0.4, -13.9, 1.5, 0.4, -13.9, 1.8, 0.4, -16.6, -1.8, 0.4, -16.6, 1.8, 0.4, -16.6, 11.4, 0.4, -26.2, 11.4, 0.4, -29.8, -1.8, 0.4, -39.4, -11.4, 0.4, -28, -1.8, 0.4, -16.6, 1.8, 0.4, -39.4, 1.5, 0.4, -45.4, -1.5, 0.4, -45.4, -1.8, 0.4, -39.4, 11.4, 0.4, -29.8, 1.8, 0.4, -39.4, -1.8, 0.4, -39.4, 1.8, 0.4, -16.6, 11.4, 0.4, -16.6, 11.4, 0.4, -26.2, 11.4, 0.4, -29.8, 11.4, 0.4, -39.4, 1.8, 0.4, -39.4, -1.8, 0.4, -39.4, -11.4, 0.4, -39.4, -11.4, 0.4, -28, 12.9, 0.4, -29.5, 12.9, 0.4, -26.5, 14.4, 0.4, -26.2, 14.4, 0.4, -29.8, 14.4, 0.4, -26.2, 21.3, 0.4, -24.4, 21.3, 0.4, -31.6, 14.4, 0.4, -29.8, 14.4, 0.4, -26.2, 14.4, 0.4, -24.4, 21.3, 0.4, -24.4, 21.3, 0.4, -31.6, 14.4, 0.4, -31.6, 14.4, 0.4, -29.8, 1.5, 0.4, -3.7, -1.5, 0.4, -3.7, -3.6, 0.4, -3.4, -3.6, 0.4, 3.5, 3.6, 0.4, 3.5, 3.6, 0.4, -3.4, 1.5, 0.4, -13.9, -1.5, 0.4, -13.9, -1.5, 0.4, -3.7, 1.5, 0.4, -3.7 )
polygons = [ PoolIntArray( 2, 1, 3 ), PoolIntArray( 3, 1, 0 ), PoolIntArray( 6, 5, 4 ), PoolIntArray( 7, 10, 8 ), PoolIntArray( 8, 10, 9 ), PoolIntArray( 11, 16, 12 ), PoolIntArray( 12, 16, 13 ), PoolIntArray( 13, 16, 15 ), PoolIntArray( 13, 15, 14 ), PoolIntArray( 18, 17, 19 ), PoolIntArray( 19, 17, 20 ), PoolIntArray( 23, 22, 21 ), PoolIntArray( 24, 26, 25 ), PoolIntArray( 29, 28, 27 ), PoolIntArray( 32, 31, 30 ), PoolIntArray( 33, 36, 34 ), PoolIntArray( 34, 36, 35 ), PoolIntArray( 40, 39, 37 ), PoolIntArray( 37, 39, 38 ), PoolIntArray( 43, 42, 41 ), PoolIntArray( 46, 45, 44 ), PoolIntArray( 47, 52, 48 ), PoolIntArray( 48, 52, 49 ), PoolIntArray( 49, 52, 51 ), PoolIntArray( 49, 51, 50 ), PoolIntArray( 56, 55, 53 ), PoolIntArray( 53, 55, 54 ) ]

[sub_resource type="BoxShape" id=4]
extents = Vector3( 14, 1, 2 )

[node name="World" type="Spatial"]
script = ExtResource( 7 )

[node name="Player" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.809, 1.77513 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[node name="Walls" type="GridMap" parent="."]
mesh_library = ExtResource( 2 )
data = {
"cells": PoolIntArray( 2, 0, 0, 65533, 0, 0, 2, 1, 0, 65533, 1, 0, 0, 2, 0, 1, 2, 0, 2, 2, 0, 65533, 2, 0, 65534, 2, 0, 65535, 2, 0, 0, 65512, 0, 1, 65512, 0, 65534, 65512, 0, 65535, 65512, 0, 1, 65513, 0, 65534, 65513, 0, 1, 65514, 0, 2, 65514, 2, 5, 65514, 2, 8, 65514, 2, 65527, 65514, 2, 65530, 65514, 2, 65533, 65514, 2, 65534, 65514, 0, 65538, 65514, 2, 65541, 65514, 2, 65544, 65514, 2, 131063, 65514, 2, 131066, 65514, 2, 131069, 65514, 2, 131074, 65514, 2, 131077, 65514, 2, 131080, 65514, 2, 196599, 65514, 2, 196602, 65514, 2, 196605, 65514, 2, 196610, 65514, 2, 196611, 65514, 2, 196612, 65514, 2, 196613, 65514, 2, 196614, 65514, 2, 196615, 65514, 2, 196616, 65514, 2, 262135, 65514, 2, 262136, 65514, 2, 262137, 65514, 2, 262138, 65514, 2, 262139, 65514, 2, 262140, 65514, 2, 262141, 65514, 2, 1, 65515, 0, 2, 65515, 0, 3, 65515, 0, 4, 65515, 0, 5, 65515, 0, 6, 65515, 0, 65529, 65515, 0, 65530, 65515, 0, 65531, 65515, 0, 65532, 65515, 0, 65533, 65515, 0, 65534, 65515, 0, 196616, 65515, 2, 262135, 65515, 2, 6, 65516, 0, 65529, 65516, 0, 196616, 65516, 2, 262135, 65516, 2, 6, 65517, 0, 8, 65517, 2, 65527, 65517, 2, 65529, 65517, 0, 65544, 65517, 2, 131063, 65517, 2, 131080, 65517, 2, 196599, 65517, 2, 196616, 65517, 2, 262135, 65517, 2, 6, 65518, 0, 65529, 65518, 0, 262135, 65518, 2, 6, 65519, 0, 7, 65519, 0, 8, 65519, 0, 9, 65519, 0, 10, 65519, 0, 11, 65519, 0, 65529, 65519, 0, 262135, 65519, 2, 6, 65520, 0, 11, 65520, 0, 65527, 65520, 2, 65529, 65520, 0, 131063, 65520, 2, 196599, 65520, 2, 262135, 65520, 2, 11, 65521, 0, 65529, 65521, 0, 262135, 65521, 2, 11, 65522, 0, 65529, 65522, 0, 262135, 65522, 2, 6, 65523, 0, 11, 65523, 0, 65527, 65523, 2, 65529, 65523, 0, 131063, 65523, 2, 196599, 65523, 2, 262135, 65523, 2, 6, 65524, 0, 7, 65524, 0, 8, 65524, 0, 9, 65524, 0, 10, 65524, 0, 11, 65524, 0, 65529, 65524, 0, 262135, 65524, 2, 6, 65525, 0, 65529, 65525, 0, 262135, 65525, 2, 6, 65526, 0, 8, 65526, 2, 65527, 65526, 2, 65529, 65526, 0, 65544, 65526, 2, 131063, 65526, 2, 131080, 65526, 2, 196599, 65526, 2, 196616, 65526, 2, 262135, 65526, 2, 6, 65527, 0, 65529, 65527, 0, 196616, 65527, 2, 262135, 65527, 2, 1, 65528, 0, 2, 65528, 0, 3, 65528, 0, 4, 65528, 0, 5, 65528, 0, 6, 65528, 0, 65529, 65528, 0, 65530, 65528, 0, 65531, 65528, 0, 65532, 65528, 0, 65533, 65528, 0, 65534, 65528, 0, 196616, 65528, 2, 262135, 65528, 2, 1, 65529, 0, 2, 65529, 2, 5, 65529, 2, 8, 65529, 2, 65527, 65529, 2, 65530, 65529, 2, 65533, 65529, 2, 65534, 65529, 0, 65538, 65529, 2, 65541, 65529, 2, 65544, 65529, 2, 131063, 65529, 2, 131066, 65529, 2, 131069, 65529, 2, 131074, 65529, 2, 131077, 65529, 2, 131080, 65529, 2, 196599, 65529, 2, 196602, 65529, 2, 196605, 65529, 2, 196610, 65529, 2, 196611, 65529, 2, 196612, 65529, 2, 196613, 65529, 2, 196614, 65529, 2, 196615, 65529, 2, 196616, 65529, 2, 262135, 65529, 2, 262136, 65529, 2, 262137, 65529, 2, 262138, 65529, 2, 262139, 65529, 2, 262140, 65529, 2, 262141, 65529, 2, 1, 65530, 0, 65534, 65530, 0, 1, 65531, 0, 65534, 65531, 0, 1, 65532, 0, 65534, 65532, 0, 1, 65533, 0, 2, 65533, 0, 65533, 65533, 0, 65534, 65533, 0, 2, 65534, 0, 65533, 65534, 0, 2, 65535, 0, 65533, 65535, 0 )
}
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, 3, 0 )
}

[node name="Navigation" type="Navigation" parent="."]

[node name="NavigationMeshInstance" type="NavigationMeshInstance" parent="Navigation"]
visible = false
navmesh = SubResource( 3 )

[node name="Floors" type="GridMap" parent="Navigation/NavigationMeshInstance"]
mesh_library = ExtResource( 5 )
cell_center_y = false
data = {
"cells": PoolIntArray( 0, 0, 2, 1, 0, 4, 65534, 0, 4, 65535, 0, 2, 0, 1, 4, 1, 1, 4, 65534, 1, 4, 65535, 1, 4, 0, 65513, 4, 65535, 65513, 4, 0, 65514, 4, 65535, 65514, 4, 0, 65515, 4, 65535, 65515, 4, 0, 65516, 6, 1, 65516, 6, 2, 65516, 6, 3, 65516, 6, 4, 65516, 6, 5, 65516, 6, 65530, 65516, 6, 65531, 65516, 6, 65532, 65516, 6, 65533, 65516, 6, 65534, 65516, 6, 65535, 65516, 6, 0, 65517, 6, 1, 65517, 6, 2, 65517, 4, 3, 65517, 6, 4, 65517, 4, 5, 65517, 6, 65530, 65517, 6, 65531, 65517, 4, 65532, 65517, 6, 65533, 65517, 4, 65534, 65517, 6, 65535, 65517, 6, 0, 65518, 6, 1, 65518, 6, 2, 65518, 6, 3, 65518, 6, 4, 65518, 6, 5, 65518, 6, 65530, 65518, 6, 65531, 65518, 6, 65532, 65518, 6, 65533, 65518, 6, 65534, 65518, 6, 65535, 65518, 6, 0, 65519, 6, 1, 65519, 6, 2, 65519, 6, 3, 65519, 6, 4, 65519, 4, 5, 65519, 6, 65530, 65519, 6, 65531, 65519, 4, 65532, 65519, 6, 65533, 65519, 6, 65534, 65519, 6, 65535, 65519, 6, 0, 65520, 6, 1, 65520, 6, 2, 65520, 6, 3, 65520, 6, 4, 65520, 6, 5, 65520, 6, 7, 65520, 4, 8, 65520, 4, 9, 65520, 4, 10, 65520, 4, 65530, 65520, 6, 65531, 65520, 6, 65532, 65520, 6, 65533, 65520, 6, 65534, 65520, 6, 65535, 65520, 6, 0, 65521, 6, 1, 65521, 6, 2, 65521, 6, 3, 65521, 6, 4, 65521, 6, 5, 65521, 6, 6, 65521, 4, 7, 65521, 4, 8, 65521, 2, 9, 65521, 2, 10, 65521, 4, 65530, 65521, 6, 65531, 65521, 6, 65532, 65521, 6, 65533, 65521, 6, 65534, 65521, 6, 65535, 65521, 6, 0, 65522, 6, 1, 65522, 6, 2, 65522, 6, 3, 65522, 6, 4, 65522, 6, 5, 65522, 6, 6, 65522, 4, 7, 65522, 4, 8, 65522, 2, 9, 65522, 2, 10, 65522, 4, 65530, 65522, 6, 65531, 65522, 6, 65532, 65522, 6, 65533, 65522, 6, 65534, 65522, 6, 65535, 65522, 6, 0, 65523, 6, 1, 65523, 6, 2, 65523, 6, 3, 65523, 6, 4, 65523, 6, 5, 65523, 6, 7, 65523, 4, 8, 65523, 4, 9, 65523, 4, 10, 65523, 4, 65530, 65523, 6, 65531, 65523, 6, 65532, 65523, 6, 65533, 65523, 6, 65534, 65523, 6, 65535, 65523, 6, 0, 65524, 6, 1, 65524, 6, 2, 65524, 6, 3, 65524, 6, 4, 65524, 4, 5, 65524, 6, 65530, 65524, 6, 65531, 65524, 4, 65532, 65524, 6, 65533, 65524, 6, 65534, 65524, 6, 65535, 65524, 6, 0, 65525, 6, 1, 65525, 6, 2, 65525, 6, 3, 65525, 6, 4, 65525, 6, 5, 65525, 6, 65530, 65525, 6, 65531, 65525, 6, 65532, 65525, 6, 65533, 65525, 6, 65534, 65525, 6, 65535, 65525, 6, 0, 65526, 6, 1, 65526, 6, 2, 65526, 4, 3, 65526, 6, 4, 65526, 4, 5, 65526, 6, 65530, 65526, 6, 65531, 65526, 4, 65532, 65526, 6, 65533, 65526, 4, 65534, 65526, 6, 65535, 65526, 6, 0, 65527, 6, 1, 65527, 6, 2, 65527, 6, 3, 65527, 6, 4, 65527, 6, 5, 65527, 6, 65530, 65527, 6, 65531, 65527, 6, 65532, 65527, 6, 65533, 65527, 6, 65534, 65527, 6, 65535, 65527, 6, 0, 65528, 4, 65535, 65528, 4, 0, 65529, 4, 65535, 65529, 4, 0, 65530, 4, 65535, 65530, 4, 0, 65531, 4, 65535, 65531, 4, 0, 65532, 4, 65535, 65532, 4, 0, 65533, 4, 65535, 65533, 4, 0, 65534, 4, 1, 65534, 4, 65534, 65534, 4, 65535, 65534, 4, 0, 65535, 2, 1, 65535, 4, 65534, 65535, 536870916, 65535, 65535, 2 )
}
__meta__ = {
"_editor_clip_": 0
}

[node name="ShadeWarrior" parent="Navigation" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.0495, -43.31 )

[node name="Moon" parent="." instance=ExtResource( 3 )]
transform = Transform( 3, 0, 0, 0, 3, 0, 0, 0, 3, -20, 50, -50 )

[node name="devlight" type="DirectionalLight" parent="."]
transform = Transform( -0.954459, 0.298341, 4.8606e-08, 0, -1.62921e-07, 1, 0.298341, 0.95446, 1.55501e-07, 0, 0, 0 )
visible = false
light_indirect_energy = 0.0
shadow_enabled = true

[node name="gamelight" type="DirectionalLight" parent="."]
transform = Transform( -0.798184, 0.425971, -0.425971, 0, 0.707107, 0.707107, 0.602414, 0.564401, -0.564401, 0, 0, 0 )
light_color = Color( 0.529412, 0.439216, 0.439216, 1 )
light_indirect_energy = 0.0
shadow_enabled = true
shadow_color = Color( 0.352941, 0.333333, 0.478431, 1 )
shadow_bias = 0.0
shadow_contact = 0.34

[node name="CrestPiece" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 17.5454, 1.17248, -27.7192 )
pieceNumber = 2

[node name="roof" type="GridMap" parent="."]
visible = false
mesh_library = ExtResource( 2 )
data = {
"cells": PoolIntArray( 65536, 0, 0, 65537, 0, 0, 131070, 0, 0, 131071, 0, 0, 65536, 1, 0, 65537, 1, 0, 131070, 1, 0, 131071, 1, 0, 65536, 2, 0, 65537, 2, 0, 131070, 2, 0, 131071, 2, 0, 65536, 65512, 0, 65537, 65512, 0, 131070, 65512, 0, 131071, 65512, 0, 65536, 65513, 0, 65537, 65513, 0, 131070, 65513, 0, 131071, 65513, 0, 65536, 65514, 0, 65537, 65514, 0, 131070, 65514, 0, 131071, 65514, 0, 65536, 65515, 0, 65537, 65515, 0, 131070, 65515, 0, 131071, 65515, 0, 65542, 65519, 0, 65543, 65519, 0, 65544, 65519, 0, 65545, 65519, 0, 65546, 65519, 0, 65547, 65519, 0, 65542, 65520, 0, 65543, 65520, 0, 65544, 65520, 0, 65545, 65520, 0, 65546, 65520, 0, 65547, 65520, 0, 65542, 65521, 0, 65543, 65521, 0, 65544, 65521, 0, 65545, 65521, 0, 65546, 65521, 0, 65547, 65521, 0, 65542, 65522, 0, 65543, 65522, 0, 65544, 65522, 0, 65545, 65522, 0, 65546, 65522, 0, 65547, 65522, 0, 65542, 65523, 0, 65543, 65523, 0, 65544, 65523, 0, 65545, 65523, 0, 65546, 65523, 0, 65547, 65523, 0, 65542, 65524, 0, 65543, 65524, 0, 65544, 65524, 0, 65545, 65524, 0, 65546, 65524, 0, 65547, 65524, 0, 65536, 65528, 0, 65537, 65528, 0, 131070, 65528, 0, 131071, 65528, 0, 65536, 65529, 0, 65537, 65529, 0, 131070, 65529, 0, 131071, 65529, 0, 65536, 65530, 0, 65537, 65530, 0, 131070, 65530, 0, 131071, 65530, 0, 65536, 65531, 0, 65537, 65531, 0, 131070, 65531, 0, 131071, 65531, 0, 65536, 65532, 0, 65537, 65532, 0, 131070, 65532, 0, 131071, 65532, 0, 65536, 65533, 0, 65537, 65533, 0, 131070, 65533, 0, 131071, 65533, 0, 65536, 65534, 0, 65537, 65534, 0, 131070, 65534, 0, 131071, 65534, 0, 65536, 65535, 0, 65537, 65535, 0, 131070, 65535, 0, 131071, 65535, 0 )
}
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, 1, 0 )
}

[node name="playergate" parent="." instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -16.1 )

[node name="bossgate" parent="." instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -39.9 )

[node name="crestGate" parent="." instance=ExtResource( 8 )]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, 11.9, 0, -28 )

[node name="DoorTriggerArea" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="DoorTriggerArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -13.8916 )
shape = SubResource( 4 )

[node name="enemyTriggerArea" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="enemyTriggerArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -21.894 )
shape = SubResource( 4 )

[node name="enemyTriggerArea2" type="Area" parent="."]

[node name="enemyDoorClose" type="CollisionShape" parent="enemyTriggerArea2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -36.7762 )
shape = SubResource( 4 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -9.0
autoplay = true
[connection signal="area_entered" from="DoorTriggerArea" to="." method="_on_DoorTriggerArea_area_entered"]
[connection signal="body_entered" from="DoorTriggerArea" to="." method="_on_DoorTriggerArea_body_entered"]
[connection signal="area_entered" from="enemyTriggerArea" to="." method="_on_enemyTriggerArea_area_entered"]
[connection signal="area_entered" from="enemyTriggerArea2" to="." method="_on_enemyTriggerArea2_area_entered"]
